--- a/blog_on_rails/Gemfile
+++ b/blog_on_rails/Gemfile
@@ -19,6 +19,9 @@ gem 'jbuilder', '~> 2.7'
 gem 'bootstrap', '~> 5.0.1'
 
 gem 'jquery-rails'
+
+# Use Active Model has_secure_password
+gem 'bcrypt', '~> 3.1.7'
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
 # Use Active Model has_secure_password
