--- a/blog_on_rails/Gemfile
+++ b/blog_on_rails/Gemfile
@@ -22,6 +22,10 @@ gem 'jquery-rails'
 
 # Use Active Model has_secure_password
 gem 'bcrypt', '~> 3.1.7'
+
+# Used for authorization
+gem 'cancancan', '~> 3.3'
+
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
 # Use Active Model has_secure_password
